# LightGBM_AnomalyClassification

./: README.md  pyproject.toml  setup.cfg
src/: Runner_GBM.py
src/Model/: BuildConfusionMatrix.py  BuildDataloader.py  LightGBModel.py  ProcessData.py  ReadData.py  TrainTestValSplit.py
src/config/: .env  config.py
