[tool.poetry]
name = "gbm"
version = "0.1.0"
description = ""
authors = ["Fabricio"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
lightgbm = "^4.5.0"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"
numpy = "1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
